Reverted to old logic and cleaned up
Moved the coinPile determining code inside getItemGraph and refactored the req.session conditions.

--- a/views/results.ejs
+++ b/views/results.ejs
@@ -2,6 +2,7 @@
 
 <p><%=number%>&times;<%=name%>
 <img src="<%=image%>" alt="">
-<img src="<%=coinPile%>" alt="">
+Total price: <%=totalPrice %> <img src="<%=coinPile%>" alt="">
 </p>
-<p>Total price: <%=totalPrice%>gp (<%=exactPrice%>gp/ea.)</p>
+<p><%=exactPrice%>gp/ea.</p>
+
