Fixed checkPreviousSearch  middleware and put potion functions into one file
Need to implement more choice in the search to better reflect what 'finalPrice' should be. Currently it is misleading.

--- a/views/results.ejs
+++ b/views/results.ejs
@@ -9,4 +9,4 @@
         (<%=ingredient.data.exactPrice%>gp/ea.)
     </p>
 <% }%>
-<p>Final price: <%=finalPrice%></p>
+<!-- <p>Final price: <%=finalPrice%></p> -->
