--- a/views/test.ejs
+++ b/views/test.ejs
@@ -1,12 +1,29 @@
 <% layout("layouts/boilerplate") -%>
-<%for(const ingredient of ingredients){%>    
-    <p>
-        <% for(let i = 0; i<ingredient.tab; i++){ %>
-            &emsp;&emsp;
-        <% } %>
-        <%=ingredient.data.number%>&times;<%=ingredient.item%> <img src="<%=ingredient.data.image%>">
-        Total price: <%=ingredient.data.totalPrice%> <img src="<%=ingredient.data.coinPile%>">
-        (<%=ingredient.data.exactPrice%>gp/ea.)
-    </p>
-<% }%>
-<!-- <p>Final price: <%=finalPrice%></p> -->
+
+<!-- We stop at each ingredient of tab 1 and then continue iterating ingredients until we find another ingredient of tab 1, then start 
+this process again at the newfound ingredient of tab 1. Repeat until no more ingredients. 
+The last ingredient is dealt with individually, possibly due to bad implementation.-->
+
+<h1 class="text-center"><%=ingredients[0].item%></h1>
+<% ingredients.forEach((ingredient,idx)=>{ %>  
+    <% if(ingredient.tab===1){ %> 
+    <div style="display:inline-flex;flex-direction: column;" class="m-3">
+        <%for(let i=idx; i<ingredients.length-1; i++ ){%>
+            <%if(ingredients[i+1].tab===1){%>
+                <p>
+                    <span style="padding-left:<%=ingredients[i].tab*(ingredients[i].tab)/2%>em;font-size: <%=2-0.2*ingredients[i].tab%>em;font-weight: <%=700-200*ingredients[i].tab%>;"><%=ingredients[i].item%></span>
+                </p>
+                <%break;%>
+            <% } %> 
+            <p>
+                <span style="padding-left:<%=ingredients[i].tab*(ingredients[i].tab)/2%>em;font-size: <%=2-0.2*ingredients[i].tab%>em;font-weight: <%=700-200*ingredients[i].tab%>;"><%=ingredients[i].item%></span>
+            </p>
+            <% if(i+1===ingredients.length-1){ %>
+                <p>
+                    <span style="padding-left:<%=ingredients[i+1].tab*(ingredients[i+1].tab)/2%>em;font-size: <%=2-0.2*ingredients[i+1].tab%>em;font-weight: <%=700-200*ingredients[i+1].tab%>;"><%=ingredients[i+1].item%></span>
+                </p> 
+            <% } %> 
+        <% }%>
+    </div>
+    <% } %> 
+<% }) %> 
