Added some checkboxes to test page.
Need to choose and start thinking about styles.

--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -7,8 +7,8 @@
       </button>
       <div class="collapse navbar-collapse ml-auto d-lg-flex flex-row-reverse" id="navbarNavDropdown">
         <div class="navbar-nav">
-          <a class="nav-link" href="/" >Home</a>
-          <a class="nav-link" href="#" data-bs-toggle="modal" data-bs-target="#aboutPotionChain">About</a>
+          <a class="nav-link mx-3 pt-3 fs-2 " href="/" >Home</a>
+          <a class="nav-link mx-3 pt-3 fs-2 " href="#" data-bs-toggle="modal" data-bs-target="#aboutPotionChain">About</a>
       </div>       
         </div>
     </div>
@@ -21,17 +21,17 @@
   
   <!-- Modal -->
   <div class="modal fade" id="aboutPotionChain" tabindex="-1" aria-labelledby="aboutPotionChainLabel" aria-hidden="true">
-    <div class="modal-dialog">
+    <div class="modal-dialog modal-dialog-centered">
       <div class="modal-content">
         <div class="modal-header">
           <h5 class="modal-title" id="aboutPotionChainLabel">Potion Chain V.1.0</h5>
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
         <div class="modal-body">
-          A supply chain visualizer for potions in RuneScape 3.
+          <p>A supply chain visualizer for potions in RuneScape 3.</p>
         </div>
         <div class="modal-footer">
-           <a href="https://github.com/Tiamtum/PotionChain" class="btn btn-primary">Github</a>
+           <a href="https://github.com/morganchafe/PotionChain" class="btn btn-primary">Github</a>
           <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
         </div>
       </div>
