--- a/views/test.ejs
+++ b/views/test.ejs
@@ -11,19 +11,39 @@ The last ingredient is dealt with individually, possibly due to bad implementati
         <%for(let i=idx; i<ingredients.length-1; i++ ){%>
             <%if(ingredients[i+1].tab===1){%>
                 <p>
-                    <span style="padding-left:<%=ingredients[i].tab*(ingredients[i].tab)/2%>em;font-size: <%=2-0.2*ingredients[i].tab%>em;font-weight: <%=700-200*ingredients[i].tab%>;"><%=ingredients[i].item%></span>
+                    <span style="padding-left:<%=ingredients[i].tab*(ingredients[i].tab)/2%>em;font-size: <%=2-0.2*ingredients[i].tab%>em;font-weight: <%=800-200*ingredients[i].tab%>;">
+                        <input type="checkbox" id="<%=i%>" class="mx-2 form-check-input">
+                            <label class="form-check-label" for="<%=i%>">
+                                <%=ingredients[i].item%>
+                            </label>
+                        </span>
                 </p>
                 <%break;%>
             <% } %> 
             <p>
-                <span style="padding-left:<%=ingredients[i].tab*(ingredients[i].tab)/2%>em;font-size: <%=2-0.2*ingredients[i].tab%>em;font-weight: <%=700-200*ingredients[i].tab%>;"><%=ingredients[i].item%></span>
+                <span style="padding-left:<%=ingredients[i].tab*(ingredients[i].tab)/2%>em;font-size: <%=2-0.2*ingredients[i].tab%>em;font-weight: <%=800-200*ingredients[i].tab%>;">
+                    <input type="checkbox" id="<%=i%>" class="mx-2 form-check-input">
+                        <label class="form-check-label" for="<%=i%>">
+                            <%=ingredients[i].item%>
+                        </label>
+                    </span>
             </p>
             <% if(i+1===ingredients.length-1){ %>
                 <p>
-                    <span style="padding-left:<%=ingredients[i+1].tab*(ingredients[i+1].tab)/2%>em;font-size: <%=2-0.2*ingredients[i+1].tab%>em;font-weight: <%=700-200*ingredients[i+1].tab%>;"><%=ingredients[i+1].item%></span>
+
+                    <span style="padding-left:<%=ingredients[i+1].tab*(ingredients[i+1].tab)/2%>em;font-size: <%=2-0.2*ingredients[i+1].tab%>em;font-weight: <%=800-200*ingredients[i+1].tab%>;">
+                        <input type="checkbox" id="<%=i+1%>" class="mx-2 form-check-input">
+                            <label class="form-check-label" for="<%=i+1%>">    
+                                <%=ingredients[i+1].item%>
+                            </label>
+                    </span>
                 </p> 
             <% } %> 
         <% }%>
     </div>
     <% } %> 
 <% }) %> 
+<div class="my-3 d-flex flex-row-reverse">
+    <button class="btn btn-primary" id="uncheck">Uncheck all</button>
+</div>
+<script src="/javascripts/boxesAndButton.js"></script>
