--- a/views/test.ejs
+++ b/views/test.ejs
@@ -10,34 +10,34 @@ The last ingredient is dealt with individually, possibly due to bad implementati
 
             <% ingredients.forEach((ingredient,idx)=>{ %>
                 <% if(ingredient.tab===1){ %>
-                <div class="col-4 my-2 ">
+                <div class="col-xl-4 my-2">
                     <%for(let i=idx; i<ingredients.length-1; i++ ){%>
                         <%if(ingredients[i+1].tab===1){%>
                             <p>
-                                <span style="padding-left:<%=ingredients[i].tab*(ingredients[i].tab)/2%>em;font-size: <%=2-0.2*ingredients[i].tab%>em;font-weight: <%=600-50*ingredients[i].tab%>;">
-                                    <input type="checkbox" id="<%=i%>" class="mx-2 form-check-input">
+                                <span style="padding-left:<%=ingredients[i].tab*(ingredients[i].tab)/2%>em;font-size: <%=1.7-0.2*ingredients[i].tab%>em;font-weight: <%=600-50*ingredients[i].tab%>;">
+                                    <input type="checkbox" id="<%=i%>" class="d-none d-md-inline-block d-md-inline mx-2 form-check-input">
                                         <label class="form-check-label" for="<%=i%>">
-                                            <img src="<%=ingredients[i].data.image%>" alt=""> <%=ingredients[i].item%>
+                                            <%=ingredients[i].data.number%>&times;<img src="<%=ingredients[i].data.image%>" alt=""> <%=ingredients[i].item%> <img src="<%=ingredients[i].data.coinPile%>" alt="" class="d-none d-md-inline" data-bs-toggle="tooltip" title="<%=ingredients[i].data.totalPrice%>gp">
                                         </label>
                                     </span>
                             </p>
                             <%break;%>
                         <% } %>
                         <p>
-                            <span style="padding-left:<%=ingredients[i].tab*(ingredients[i].tab)/2%>em;font-size: <%=2-0.2*ingredients[i].tab%>em;font-weight: <%=600-50*ingredients[i].tab%>;">
-                                <input type="checkbox" id="<%=i%>" class="mx-2 form-check-input">
+                            <span style="padding-left:<%=ingredients[i].tab*(ingredients[i].tab)/2%>em;font-size: <%=1.7-0.2*ingredients[i].tab%>em;font-weight: <%=600-50*ingredients[i].tab%>;">
+                                <input type="checkbox" id="<%=i%>" class="d-none d-md-inline-block mx-2 form-check-input">
                                     <label class="form-check-label" for="<%=i%>">
-                                        <img src="<%=ingredients[i].data.image%>" alt=""> <%=ingredients[i].item%>
+                                        <%=ingredients[i].data.number%>&times;<img src="<%=ingredients[i].data.image%>" alt=""> <%=ingredients[i].item%> <img src="<%=ingredients[i].data.coinPile%>" alt="" class="d-none d-md-inline" data-bs-toggle="tooltip" title="<%=ingredients[i].data.totalPrice%>gp" >
                                     </label>
                                 </span>
                         </p>
                         <% if(i+1===ingredients.length-1){ %>
                             <p>
             
-                                <span style="padding-left:<%=ingredients[i+1].tab*(ingredients[i+1].tab)/2%>em;font-size: <%=2-0.2*ingredients[i+1].tab%>em;font-weight: <%=600-50*ingredients[i+1].tab%>;">
-                                    <input type="checkbox" id="<%=i+1%>" class="mx-2 form-check-input">
+                                <span style="padding-left:<%=ingredients[i+1].tab*(ingredients[i+1].tab)/2%>em;font-size: <%=1.7-0.2*ingredients[i+1].tab%>em;font-weight: <%=600-50*ingredients[i+1].tab%>;">
+                                    <input type="checkbox" id="<%=i+1%>" class="d-none d-md-inline-block mx-2 form-check-input">
                                         <label class="form-check-label" for="<%=i+1%>">
-                                            <img src="<%=ingredients[i].data.image%>" alt=""> <%=ingredients[i+1].item%>
+                                            <%=ingredients[i].data.number%>&times;<img src="<%=ingredients[i].data.image%>" alt=""> <%=ingredients[i+1].item%> <img src="<%=ingredients[i].data.coinPile%>" alt="" class="d-none d-md-inline" data-bs-toggle="tooltip" title="<%=ingredients[i].data.totalPrice%>gp">
                                         </label>
                                 </span>
                             </p>
@@ -53,3 +53,10 @@ The last ingredient is dealt with individually, possibly due to bad implementati
     <button class="btn btn-primary" id="uncheck">Uncheck all</button>
 </div>
 <script src="/javascripts/boxesAndButton.js"></script>
+<script>
+const tooltipTriggerList = [].slice.call(document.querySelectorAll('[data-bs-toggle="tooltip"]'))
+const tooltipList = tooltipTriggerList.map(function (tooltipTriggerEl) {
+  return new bootstrap.Tooltip(tooltipTriggerEl)
+})
+console.log(tooltipList)
+</script>
