--- a/views/index.ejs
+++ b/views/index.ejs
@@ -18,25 +18,47 @@
     <span class="spinner-border spinner-border-sm" role="status" id="spinner" hidden></span>
 </button>
 </form> -->
-<form action="/test" method="GET" class="validated-form" novalidate>
-    <div class="input-group input-group-lg mb-3">
-        <span class="input-group-text" id="potionInput">Potion</span>
-        <input type="text" class="form-control" name="name" placeholder="TO /TEST" aria-label="Enter potion name (E.g. \'Elder Overload\')" aria-describedby="potionInput" required>
-        <div class="valid-feedback">
-            Looks good!
-        </div>
+<div class="row d-flex justify-content-center">
+    <!-- <div class="col-md-6 col-sm-12"> -->
+    <div class="col-lg-6 col-sm-12">
+
+        <form action="/test" method="GET" class="validated-form" novalidate>
+            <div class="input-group input-group-lg mb-3">
+                <span class="input-group-text" id="potionInput">Potion</span>
+                <input type="text" class="form-control" name="name" placeholder="TO /TEST" aria-label="Enter potion name (E.g. \'Elder Overload\')" aria-describedby="potionInput" required>
+                <div class="valid-feedback">
+                    Looks good!
+                </div>
+            </div>
+            <div class="input-group input-group-lg mb-3">
+                <span class="input-group-text" id="potionQuantity">Quantity</span>
+                <input type="number" name="number" min="1" max="2147483647" class="form-control" placeholder="TO /TEST " aria-label="Number of Potions" aria-describedby="potionQuantity" required>
+                <div class="valid-feedback">
+                    Looks good!
+                </div>
+            </div>
+            <div class="d-flex justify-content-around">
+                <div>
+                    <input class="form-check-input" type="radio" name="display" id="optionEssential" value="essential" checked>
+                    <label class="form-check-label" for="optionEssential" data-bs-toggle="tooltip" data-bs-placement="bottom"  title="Display only the primary ingredients.">
+                        Essential display
+                    </label>
+                </div>
+                <div>
+                    <input class="form-check-input" type="radio" name="display" id="optionFull" value="full">
+                    <label class="form-check-label" for="optionFull" data-bs-toggle="tooltip" data-bs-placement="bottom"  title="Display everything.">
+                        Full display
+                    </label>
+                </div>
+            </div>
+            <div class="d-flex justify-content-center mt-3">
+                <button class="btn btn-success" id="submitButton" >
+                    /test
+                </button>
+            </div>
+        </form>
     </div>
-    <div class="input-group input-group-lg mb-3">
-        <span class="input-group-text" id="potionQuantity">Quantity</span>
-        <input type="number" name="number" min="0 max="2147483647" class="form-control" placeholder="TO /TEST " aria-label="Number of Potions" aria-describedby="potionQuantity" required>
-        <div class="valid-feedback">
-            Looks good!
-        </div>
-    </div>
-    <button class="btn btn-primary" id="submitButton" >
-        /test
-    </button>
-</form>
+</div>
 
 <script src="/javascripts/validateForms.js"></script>
 
@@ -67,4 +89,12 @@
         }
     })
 
+</script>
+
+<script>
+    const tooltipTriggerList = [].slice.call(document.querySelectorAll('[data-bs-toggle="tooltip"]'))
+    const tooltipList = tooltipTriggerList.map(function (tooltipTriggerEl) {
+      return new bootstrap.Tooltip(tooltipTriggerEl)
+    })
+    console.log(tooltipList)
 </script>
