--- a/views/index.ejs
+++ b/views/index.ejs
@@ -53,7 +53,7 @@
             </div>
             <div class="d-flex justify-content-center mt-3">
                 <button class="btn btn-success" id="submitButton" >
-                    /test
+                    <span class="spinner-border spinner-border-sm" role="status" id="spinner" hidden></span>
                 </button>
             </div>
         </form>
