Changed results layout. Need to fix bug with last ingredient not showing.

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,38 +1,18 @@
 <% layout("layouts/boilerplate") -%>
-<!-- <form action="/results" method="GET" class="validated-form" novalidate>
-<div class="input-group input-group-lg mb-3">
-    <span class="input-group-text" id="potionInput">Potion</span>
-    <input type="text" class="form-control" name="name" placeholder="Enter potion name (E.g. &quot;Elder Overload&quot;)" aria-label="Enter potion name (E.g. \'Elder Overload\')" aria-describedby="potionInput" required>
-    <div class="valid-feedback">
-        Looks good!
-    </div>
-</div>
-<div class="input-group input-group-lg mb-3">
-    <span class="input-group-text" id="potionQuantity">Quantity</span>
-    <input type="number" name="number" min="0 max="2147483647" class="form-control" placeholder="How many potions? (Number between 0 and 2,147,483,647) " aria-label="Number of Potions" aria-describedby="potionQuantity" required>
-    <div class="valid-feedback">
-        Looks good!
-    </div>
-</div>
-<button class="btn btn-primary" id="submitButton" >
-    <span class="spinner-border spinner-border-sm" role="status" id="spinner" hidden></span>
-</button>
-</form> -->
-<div class="row d-flex justify-content-center">
-    <!-- <div class="col-md-6 col-sm-12"> -->
-    <div class="col-lg-6 col-sm-12">
 
-        <form action="/test" method="GET" class="validated-form" novalidate>
+<div class="row d-flex justify-content-center">
+    <div class="col-lg-6 col-sm-12">
+        <form action="/results" method="GET" class="validated-form" novalidate>
             <div class="input-group input-group-lg mb-3">
                 <span class="input-group-text" id="potionInput">Potion</span>
-                <input type="text" class="form-control" name="name" placeholder="TO /TEST" aria-label="Enter potion name (E.g. \'Elder Overload\')" aria-describedby="potionInput" required>
+                <input type="text" class="form-control" name="name" placeholder="Enter potion name (E.g. &quot;Elder Overload&quot;)" aria-label="Enter potion name (E.g. \'Elder Overload\')" aria-describedby="potionInput" required>
                 <div class="valid-feedback">
                     Looks good!
                 </div>
             </div>
             <div class="input-group input-group-lg mb-3">
                 <span class="input-group-text" id="potionQuantity">Quantity</span>
-                <input type="number" name="number" min="1" max="2147483647" class="form-control" placeholder="TO /TEST " aria-label="Number of Potions" aria-describedby="potionQuantity" required>
+                <input type="number" name="number" min="1" max="2147483647" class="form-control" placeholder="How many potions? (Number between 0 and 2,147,483,647)" aria-label="Number of Potions" aria-describedby="potionQuantity" required>
                 <div class="valid-feedback">
                     Looks good!
                 </div>
