--- a/views/layouts/boilerplate.ejs
+++ b/views/layouts/boilerplate.ejs
@@ -16,7 +16,8 @@
 </head>
 <body class="d-flex flex-column vh-100">
     <%-include("../partials/navbar") %>
-    <main class="container-fluid mt-5">
+    <!-- <main class="container-fluid mt-5"> -->
+    <main class="container mt-5">
         <%- body %>
     </main>
     <!-- <%-include("../partials/footer") %> -->
