--- a/views/results.ejs
+++ b/views/results.ejs
@@ -1,12 +1,84 @@
 <% layout("layouts/boilerplate") -%>
-<%for(const ingredient of ingredients){%>    
-    <p>
-        <% for(let i = 0; i<ingredient.tab; i++){ %>
-            &emsp;&emsp;
-        <% } %>
-        <%=ingredient.data.number%>&times;<%=ingredient.item%> <img src="<%=ingredient.data.image%>">
-        Total price: <%=ingredient.data.totalPrice%> <img src="<%=ingredient.data.coinPile%>">
-        (<%=ingredient.data.exactPrice%>gp/ea.)
-    </p>
-<% }%>
-<!-- <p>Final price: <%=finalPrice%></p> -->
+<link rel="stylesheet" href="stylesheets/resultsStyles.css">
+<!-- We stop at each ingredient of tab 1 and then continue iterating ingredients until we find another ingredient of tab 1, then start 
+this process again at the newfound ingredient of tab 1. Repeat until no more ingredients. 
+The last ingredient is dealt with individually, possibly due to bad implementation.-->
+    <h1 class="text-center"><%=ingredients[0].data.number%> &times; <img src="<%=ingredients[0].data.image%>" alt=""> <%=ingredients[0].item%></h1>
+    <div class="my-3 d-flex justify-content-center">
+        <button class="btn btn-success" id="uncheck">Uncheck all</button>
+    </div>
+    <div class="row">
+        <% if(displaySetting==="full"){ %> 
+            <%console.log(`INGREDIENTS LENGTH=${ingredients.length}`)%>
+            <% ingredients.forEach((ingredient,idx)=>{ %>
+                <%console.log(`[Outer Loop] item=${ingredient.item} tab=${ingredient.tab},idx=${idx}`)%>
+                <% if(ingredient.tab===1){ %>
+                <details class="col-xl-6 my-2">
+                    <%for(let i=idx; i<ingredients.length-1; i++ ){%>
+                        <%console.log(`[Inner Loop] item=${ingredients[i].item} tab=${ingredients[i].tab} idx=${idx} i=${i}`)%>
+                        <%if(ingredients[i+1].tab===1){%>
+                            <p>
+                                <summary style="padding-left:<%=ingredients[i].tab*(ingredients[i].tab)/2%>em;font-weight: <%=600-50*ingredients[i].tab%>;"> 
+                                    <input type="checkbox" id="<%=i%>" class="d-none d-md-inline-block d-md-inline mx-2 form-check-input">
+                                        <label class="form-check-label" for="<%=i%>">
+                                            <%=ingredients[i].data.number%> &times; <img src="<%=ingredients[i].data.image%>" alt=""> <%=ingredients[i].item%> <img src="<%=ingredients[i].data.coinPile%>" alt="" class="d-none d-md-inline" data-bs-toggle="tooltip" title="<%=ingredients[i].data.totalPrice%>gp">
+                                        </label>
+                                </summary>
+                            </p>
+                            <%console.log(`[Inner Loop] BREAKING AT,item=${ingredients[i].item} tab=${ingredients[i].tab} idx=${idx} i=${i}`)%>
+                            <%break;%>
+                        <% }%>
+                        <p>
+                            <%console.log(`[Inner Loop] ADDING TO PAGE item=${ingredients[i].item} tab=${ingredients[i].tab} idx=${idx} i=${i}`)%>
+                            <summary style="padding-left:<%=ingredients[i].tab*(ingredients[i].tab)/2%>em;font-weight: <%=600-50*ingredients[i].tab%>;">
+                                <input type="checkbox" id="<%=i%>" class="d-none d-md-inline-block mx-2 form-check-input">
+                                    <label class="form-check-label" for="<%=i%>">
+                                        <%=ingredients[i].data.number%> &times; <img src="<%=ingredients[i].data.image%>" alt=""> <%=ingredients[i].item%> <img src="<%=ingredients[i].data.coinPile%>" alt="" class="d-none d-md-inline" data-bs-toggle="tooltip" title="<%=ingredients[i].data.totalPrice%>gp" >
+                                    </label>
+                            </summary>
+                        </p>
+                    <% }%>
+                    <% if(idx===ingredients.length-1){ %>
+                        <p>
+                            <%console.log(`[Inner Loop] LAST INGREDIENT item=${ingredients[idx].item} tab=${ingredients[idx].tab} idx=${idx}`)%>
+                            <summary style="padding-left:<%=ingredients[idx].tab*(ingredients[idx].tab)/2%>em;font-weight: <%=600-50*ingredient[idx].tab%>;">
+                                <input type="checkbox" id="<%=idx+1%>" class="d-none d-md-inline-block mx-2 form-check-input">
+                                    <label class="form-check-label" for="<%=idx%>">
+                                        <%=ingredients.data.number%> &times; <img src="<%=ingredients[idx].data.image%>" alt=""> <%=ingredients[idx].item%> <img src="<%=ingredients[idx].data.coinPile%>" alt="" class="d-none d-md-inline" data-bs-toggle="tooltip" title="<%=ingredients[idx].data.totalPrice%>gp">
+                                    </label>
+                            </summary>
+                        </p>
+                    <% } %>
+                </details>
+                <% } %>
+            <% }) %>
+        <% }else if(displaySetting==="essential"){ %>
+
+            <div class="col-xl-12 col-sm-12 d-flex flex-column align-items-center">       
+                    <%ingredients.slice(1).forEach((ingredient,i)=>{%>    
+                            <span style="font-size: 1.7em;">
+                                <input type="checkbox" id="<%=i%>" class="d-none d-md-inline-block form-check-input">
+                                    <label class="form-check-label" for="<%=i%>">
+                                        <%=ingredient.data.number%> &times; <img src="<%=ingredient.data.image%>"> <%=ingredient.item%> <img src="<%=ingredient.data.coinPile%>" class="d-none d-sm-inline" data-bs-toggle="tooltip" title="<%=ingredient.data.totalPrice%>gp">
+                                    </label>
+                            </span>
+                    <%})%>
+            </div>
+            
+        <% }else{ %>
+
+            <p>Error</p>    
+        <% } %>  
+
+    </div>
+<div class="d-flex justify-content-center my-3">
+    <a class="btn btn-success" href="/">Search for a new potion</a>
+</div>
+<script src="/javascripts/boxesAndButton.js"></script>
+<script>
+const tooltipTriggerList = [].slice.call(document.querySelectorAll('[data-bs-toggle="tooltip"]'))
+const tooltipList = tooltipTriggerList.map(function (tooltipTriggerEl) {
+  return new bootstrap.Tooltip(tooltipTriggerEl)
+})
+console.log(tooltipList)
+</script>
