--- a/views/results.ejs
+++ b/views/results.ejs
@@ -6,14 +6,18 @@ The last ingredient is dealt with individually, possibly due to bad implementati
     <h1 class="text-center"><%=ingredients[0].data.number%> &times; <img src="<%=ingredients[0].data.image%>" alt=""> <%=ingredients[0].item%></h1>
     <div class="my-3 d-flex justify-content-center">
         <button class="btn btn-success" id="uncheck">Uncheck all</button>
+        <p>Display setting: <%=displaySetting%></p>
     </div>
     <div class="row">
         <% if(displaySetting==="full"){ %> 
             <%console.log(`INGREDIENTS LENGTH=${ingredients.length}`)%>
             <% ingredients.forEach((ingredient,idx)=>{ %>
                 <%console.log(`[Outer Loop] item=${ingredient.item} tab=${ingredient.tab},idx=${idx}`)%>
+                
                 <% if(ingredient.tab===1){ %>
-                <details class="col-xl-6 my-2">
+                    <details class="col-xl-6 my-2">
+                        <%console.log(`[Inner Loop]idx=${idx}; ingredients.length-1:${ingredients.length-1} ,idx===ingredients.length-1 = ${idx===ingredients.length-1}`)%>
+                        
                     <%for(let i=idx; i<ingredients.length-1; i++ ){%>
                         <%console.log(`[Inner Loop] item=${ingredients[i].item} tab=${ingredients[i].tab} idx=${idx} i=${i}`)%>
                         <%if(ingredients[i+1].tab===1){%>
@@ -38,22 +42,22 @@ The last ingredient is dealt with individually, possibly due to bad implementati
                             </summary>
                         </p>
                     <% }%>
-                    <% if(idx===ingredients.length-1){ %>
+                    <% if(idx+1===ingredients.length-1){ %>
                         <p>
-                            <%console.log(`[Inner Loop] LAST INGREDIENT item=${ingredients[idx].item} tab=${ingredients[idx].tab} idx=${idx}`)%>
-                            <summary style="padding-left:<%=ingredients[idx].tab*(ingredients[idx].tab)/2%>em;font-weight: <%=600-50*ingredient[idx].tab%>;">
-                                <input type="checkbox" id="<%=idx+1%>" class="d-none d-md-inline-block mx-2 form-check-input">
-                                    <label class="form-check-label" for="<%=idx%>">
-                                        <%=ingredients.data.number%> &times; <img src="<%=ingredients[idx].data.image%>" alt=""> <%=ingredients[idx].item%> <img src="<%=ingredients[idx].data.coinPile%>" alt="" class="d-none d-md-inline" data-bs-toggle="tooltip" title="<%=ingredients[idx].data.totalPrice%>gp">
+                            <%console.log(`[Inner Loop] LAST INGREDIENT item=${ingredients[idx+1].item} tab=${ingredients[idx+1].tab} idx=${idx+1}`)%>
+                            <summary style="padding-left:<%=ingredients[idx+1].tab*(ingredients[idx+1].tab)/2%>em;font-weight: <%=600-50*ingredients[idx+1].tab%>;">
+                                <input type="checkbox" id="<%=idx+1+1%>" class="d-none d-md-inline-block mx-2 form-check-input">
+                                    <label class="form-check-label" for="<%=idx+1%>">
+                                        <%=ingredients[idx+1].data.number%> &times; <img src="<%=ingredients[idx+1].data.image%>" alt=""> <%=ingredients[idx+1].item%> <img src="<%=ingredients[idx+1].data.coinPile%>" alt="" class="d-none d-md-inline" data-bs-toggle="tooltip" title="<%=ingredients[idx+1].data.totalPrice%>gp">
                                     </label>
                             </summary>
                         </p>
                     <% } %>
+
                 </details>
                 <% } %>
             <% }) %>
         <% }else if(displaySetting==="essential"){ %>
-
             <div class="col-xl-12 col-sm-12 d-flex flex-column align-items-center">       
                     <%ingredients.slice(1).forEach((ingredient,i)=>{%>    
                             <span style="font-size: 1.7em;">
